fix(tab-bar): vertically center align scroll buttons

--- a/src/components/tab-bar/partial-styles/tab-bar-scroller.scss
+++ b/src/components/tab-bar/partial-styles/tab-bar-scroller.scss
@@ -49,7 +49,10 @@
 
 .scroll-button {
     --icon-background-color: rgb(var(--contrast-100));
-    top: functions.pxToRem(4);
+    display: flex;
+    align-items: center;
+    top: 0;
+    bottom: 0;
 
     &.left {
         transform: translate3d(
